Moved repo to home dir

--- a/.gitignore
+++ b/.gitignore
@@ -12,16 +12,16 @@
 ## apatel435
 #!/apatel435
 #/apatel435/*
-#### scripts
+##### scripts
 #!/apatel435/scripts
 #/apatel435/scripts/*
-##### mntDeb7.sh
+###### mntDeb7.sh
 #!/apatel435/scripts/mntDeb7.sh
 #
-### munzir
+#### munzir
 #!/munzir
 #/munzir/*
 #
-### shimin
+#### shimin
 #!/shimin
 #/shimin/*
