Added the start script for krang

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /apatel435/scripts/*
 ###### mntDeb7.sh
 !/apatel435/scripts/mntDeb7.sh
+###### Previous Krang stuff
+!/apatel435/krang
 
 #### munzir
 !/munzir
